[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/GameSystems/WorldScreen.gd" type="Script" id=1]
[ext_resource path="res://Assets/Images/BLACK_128x128.png" type="Texture" id=2]
[ext_resource path="res://Resources/Themes/PlainText.tres" type="Theme" id=5]

[node name="EndGameScreen" type="Node2D"]
script = ExtResource( 1 )

[node name="EndScreen" type="CanvasLayer" parent="."]

[node name="FullRect" type="Control" parent="EndScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 5 )

[node name="TextureRect" type="TextureRect" parent="EndScreen/FullRect"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true

[node name="FullRectMargin" type="MarginContainer" parent="EndScreen/FullRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_top = 40
custom_constants/margin_bottom = 40

[node name="Center" type="CenterContainer" parent="EndScreen/FullRect/FullRectMargin"]
margin_top = 40.0
margin_right = 1024.0
margin_bottom = 560.0

[node name="IntoText" type="Label" parent="EndScreen/FullRect/FullRectMargin/Center"]
margin_left = 187.0
margin_top = 163.0
margin_right = 837.0
margin_bottom = 357.0
rect_min_size = Vector2( 300, 100 )
text = "Você completou a parte 1 deste projeto

A investigação de miller continua na próxima parte

obrigado por jogar"
align = 1
valign = 1
uppercase = true

[node name="CenterBottom" type="VBoxContainer" parent="EndScreen/FullRect/FullRectMargin"]
margin_top = 40.0
margin_right = 1024.0
margin_bottom = 560.0
alignment = 2

[node name="NextButton" type="Button" parent="EndScreen/FullRect/FullRectMargin/CenterBottom"]
margin_top = 473.0
margin_right = 1024.0
margin_bottom = 520.0
focus_mode = 0
text = "MENU"
flat = true
icon_align = 1

[connection signal="pressed" from="EndScreen/FullRect/FullRectMargin/CenterBottom/NextButton" to="." method="_go_to_next_scene" binds= [ "MainMenu" ]]
