[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/GameSystems/WorldScreen.gd" type="Script" id=1]
[ext_resource path="res://Scripts/GameSystems/SoundController.gd" type="Script" id=2]

[node name="WorldScreen" type="Node2D"]
script = ExtResource( 1 )

[node name="SoundController" type="Node" parent="."]
script = ExtResource( 2 )
